
Bug fixes:
----------
* VERY IMPORTANT: Fixed the infamous bug "DAG zero... not allowed to happen!" that caused all objects in Blender to be deleted. I want to thank the user "pouar" for finding the problem and the solution for this! :-) More information: http://www.yafaray.org/node/819#comment-1921
* Fixed Multiview rendering, that had been broken due to a Blender 2.79 API change
* Minor fix for a warning "rna_uiItemR: property not found: Camera.show_title_safe" that happened sometimes.


YafaRay v3.3.0 (2017-08-22)
---------------------------

Feature changes/additions:
--------------------------
* "Flat Material" option added to Shiny Diffuse, requested by a certain user. Flat Material is a special non-photorealistic material that does not multiply the surface color by the cosine of the angle with the light, as happens in real life. Also, if receive_shadows is disabled, this flat material does no longer self-shadow. For special applications only. `[Blender Exporter + Core]`

Bug fixes:
----------
* Bidirectional: fixed transparent background not working, was causing the entire render to have transparent alpha. See: http://www.yafaray.org/community/forum/viewtopic.php?f=15&t=5236  `[Core]`
* Bidirectional: fixes (horrible hacks in fact, but...) for unitialized values causing incorrect illumination in scenes  `[Core]`
* SPPM: fixed SPPM AA panel where the AA filter type and pixel width were incorrectly disabled  `[Blender Exporter]`
* Fixed hang in Windows 7 when YafaRay is built using Visual Studio 2013.  `[Core]`
* Some building fixes  `[Core]`


YafaRay v3.2.0 (2017-03-21) for Blender 2.78c:
----------------------------------------------

Feature changes/additions in v3.2.0:
------------------------------------
* IMPORTANT: Support for Texture Mipmaps / Ray Differentials, see: http://yafaray.org/node/695 `[Blender Exporter + Core]`
    - Modifier all ImageHandlers to standardise access and make them more flexible. BIG changes to ImageHandlers.